app/assets/styles/modules/_site-header.css
.site-header {
  position: absolute;
  width: 100%;
  padding: 10px 0;
  z-index: 2;
  transition: background-color 0.3s ease-out;

  &--is-expanded {
    background-color: rgba($mainBlue, 0.55)
  }

  @mixin atMedium {
    background-color: rgba($mainBlue, 0.3);
    position: fixed;

    &--dark {
      background-color: rgba(23, 51, 72, 0.85);
    }
  }

  &__btn-container {
    @mixin atMedium {
      float: right;
    }
  }

  &__logo {
    position: absolute;
    top: 0;
    background-color: $mainBlue;
    padding: 25px 36px;
    left: 50%;
    transform: translateX(-50%) scale(0.8);
    transform-origin: 50% 0;
    transition: transform 0.3s ease-out;

    @mixin atMedium {
      left: auto;
      transform: translateX(0);

      /* logo for dark header */
      .site-header--dark & {
        transform: scale(0.564);
      }
    }
  }

  &__logo__graphic {
    text-indent: -9999px;
  }

  &__menu-icon {
    width: 20px;
    height: 19px;
    position: absolute;
    top: 10px;
    right: 10px;
    z-index: 10;

    @mixin atMedium {
      display: none;
    }

    &::before {
      content: '';
      position: absolute;
      top: 0;
      left: 0;
      width: 20px;
      height: 3px;
      background-color: white;
      transform-origin: 0 0;
      transition: transform 0.3s ease-out;
    }

    &__middle {
      position: absolute;
      top: 8px;
      left: 0;
      width: 20px;
      height: 3px;
      background-color: white;
      transition: all 0.3s ease-out;
      transform-origin: 0 50%;
    }

    &::after {
      content: '';
      position: absolute;
      bottom: 0;
      left: 0;
      width: 20px;
      height: 3px;
      background-color: white;
      transform-origin: 0 100%;
      transition: transform 0.3s ease-out;
    }
  }

  &__menu-icon--close-x {
    &::before {
      transform: rotate(45deg) scaleX(1.25);
    }

    .site-header__menu-icon__middle {
      opacity: 0;
      transform: scaleX(0);
    }

    &::after {
      transform: rotate(-45deg) scaleX(1.25) translateY(1px);
    }
  }

  &__menu-content {
    opacity: 0;
    z-index: -10;
    transform: scale(1.2);
    position: relative;
    padding-top: 90px;
    text-align: center;
    transition: all 0.3s ease-out;


    @mixin atMedium {
      opacity: 1;
      padding-top: 0;
      z-index: 1;
      transform: scale(1);
    }

    &--is-visible {
      opacity: 1;
      z-index: 1;
      transform: scale(1);
    }
  }
}

